proyecto1Parser.output
Terminales no usados en la gramática

    NULLN
    STRINGERROR
    INVCHAR
    INVESCP
    LINEJMP
    TAB
    SPACE


Estado 85 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 97 conflictos: 1 desplazamiento/reducción
Estado 106 conflictos: 1 desplazamiento/reducción
Estado 117 conflictos: 2 desplazamiento/reducción
Estado 118 conflictos: 2 desplazamiento/reducción
Estado 150 conflictos: 1 desplazamiento/reducción
Estado 152 conflictos: 2 desplazamiento/reducción
Estado 153 conflictos: 2 desplazamiento/reducción
Estado 154 conflictos: 2 desplazamiento/reducción
Estado 155 conflictos: 2 desplazamiento/reducción
Estado 156 conflictos: 2 desplazamiento/reducción
Estado 157 conflictos: 2 desplazamiento/reducción
Estado 158 conflictos: 2 desplazamiento/reducción
Estado 159 conflictos: 2 desplazamiento/reducción
Estado 160 conflictos: 2 desplazamiento/reducción
Estado 161 conflictos: 2 desplazamiento/reducción
Estado 162 conflictos: 2 desplazamiento/reducción
Estado 163 conflictos: 2 desplazamiento/reducción
Estado 164 conflictos: 2 desplazamiento/reducción
Estado 165 conflictos: 2 desplazamiento/reducción


Gramática

    0 $accept: Program $end

    1 Program: Declarations

    2 Declarations: Declaration
    3             | Declarations Declaration

    4 Declaration: VariableDecl
    5            | FunctionDecl
    6            | ClassDecl
    7            | InterfaceDecl

    8 VariableDecl: Variable SEMICLN

    9 Variable: Type ID

   10 Type: INTEGER
   11     | DOUBLE
   12     | BOOL
   13     | STRING
   14     | ID
   15     | Type LFTBRCKT RGHBRCKT

   16 FunctionDecl: FunctionName LFTPARTH Formals RGHPARTH StmtBlock

   17 FunctionName: Type ID
   18             | VOID ID

   19 Formals: Variables
   20        | %empty

   21 Variables: Variable
   22          | Variables COMMA Variable

   23 ClassDecl: ClassName Extend Implement LFTGATE Fields RGHGATE

   24 ClassName: CLASS ID

   25 Extend: EXTENDS ID
   26       | %empty

   27 Implement: IMPLEMENTS ListIdents
   28          | %empty

   29 ListIdents: ID
   30           | ListIdents COMMA ID

   31 Fields: Fields Field
   32       | %empty

   33 Field: VariableDecl
   34      | FunctionDecl

   35 InterfaceDecl: INTERFACE ID LFTGATE Prototypes RGHGATE

   36 Prototypes: Prototypes Prototype
   37           | %empty

   38 Prototype: Type ID LFTPARTH Formals RGHPARTH SEMICLN
   39          | VOID ID LFTPARTH Formals RGHPARTH SEMICLN

   40 StmtBlock: LFTGATE Stmts RGHGATE

   41 Stmts: Stmts Stmt
   42      | %empty

   43 Stmt: IfStmt
   44     | WhileStmt
   45     | ForStmt
   46     | BreakStmt
   47     | ReturnStmt
   48     | PrintStmt
   49     | StmtBlock
   50     | Expr
   51     | VariableDecl

   52 PossibleExpr: Expr
   53             | %empty

   54 IfStmt: IF LFTPARTH Expr RGHPARTH Stmt PossibleElse

   55 PossibleElse: ELSE Stmt

   56 WhileStmt: WHILE LFTPARTH Expr RGHPARTH Stmt

   57 ForStmt: FOR LFTPARTH PossibleExpr SEMICLN PossibleExpr SEMICLN PossibleExpr RGHPARTH Stmt

   58 ReturnStmt: RETURN PossibleExpr SEMICLN

   59 BreakStmt: BREAK SEMICLN

   60 PrintStmt: PRINT LFTPARTH ListExpr RGHPARTH SEMICLN

   61 ListExpr: Expr
   62         | ListExpr COMMA Expr

   63 Expr: LValue EQUAL Expr
   64     | Constant
   65     | LValue
   66     | THIS
   67     | Call
   68     | LFTPARTH Expr RGHPARTH
   69     | Expr SUM Expr
   70     | Expr SUB Expr
   71     | Expr MULT Expr
   72     | Expr DIV Expr
   73     | Expr MOD Expr
   74     | SUB Expr
   75     | Expr LESSTHN Expr
   76     | Expr LESSEQL Expr
   77     | Expr GREATERTHN Expr
   78     | Expr GREATEREQL Expr
   79     | Expr SAME Expr
   80     | Expr DIFF Expr
   81     | Expr AND Expr
   82     | Expr OR Expr
   83     | NOT Expr
   84     | READINTEGER LFTPARTH RGHPARTH
   85     | READLINE LFTPARTH RGHPARTH
   86     | NEW LFTPARTH ID RGHPARTH
   87     | NEWARRAY LFTPARTH Expr COMMA Type RGHPARTH

   88 LValue: ID
   89       | Expr POINT ID
   90       | Expr LFTBRCKT Expr RGHBRCKT

   91 Call: ID LFTPARTH Actuals RGHPARTH
   92     | Expr POINT ID LFTPARTH Actuals RGHPARTH

   93 Actuals: ListExpr
   94        | %empty

   95 Constant: INTVAL
   96         | DOUBLEVAL
   97         | TRUE
   98         | FALSE
   99         | STRINGVAL
  100         | NULLVAL


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    VOID (258) 18 39
    INTEGER (259) 10
    DOUBLE (260) 11
    BOOL (261) 12
    STRING (262) 13
    CLASS (263) 24
    INTERFACE (264) 35
    NULLN (265)
    THIS (266) 66
    EXTENDS (267) 25
    IMPLEMENTS (268) 27
    FOR (269) 57
    WHILE (270) 56
    IF (271) 54
    ELSE (272) 55
    RETURN (273) 58
    BREAK (274) 59
    NEW (275) 86
    NEWARRAY (276) 87
    PRINT (277) 60
    READINTEGER (278) 84
    READLINE (279) 85
    TRUE (280) 97
    FALSE (281) 98
    COMMA (282) 22 30 62 87
    POINT (283) 89 92
    LFTBRCKT (284) 15 90
    RGHBRCKT (285) 15 90
    LFTPARTH (286) 16 38 39 54 56 57 60 68 84 85 86 87 91 92
    RGHPARTH (287) 16 38 39 54 56 57 60 68 84 85 86 87 91 92
    SEMICLN (288) 8 38 39 57 58 59 60
    LFTGATE (289) 23 35 40
    RGHGATE (290) 23 35 40
    STRINGERROR (291)
    INVCHAR (292)
    INVESCP (293)
    LINEJMP (294)
    TAB (295)
    SPACE (296)
    INTVAL (297) 95
    DOUBLEVAL (298) 96
    STRINGVAL (299) 99
    NULLVAL (300) 100
    OR (301) 82
    LESSEQL <str> (302) 76
    ID <str> (303) 9 14 17 18 24 25 29 30 35 38 39 86 88 89 91 92
    SUM <str> (304) 69
    SUB <str> (305) 70 74
    MULT <str> (306) 71
    DIV <str> (307) 72
    LESSTHN <str> (308) 75
    GREATERTHN <str> (309) 77
    MOD <str> (310) 73
    GREATEREQL (311) 78
    EQUAL (312) 63
    SAME (313) 79
    DIFF (314) 80
    AND (315) 81
    NOT (316) 83


No terminales con las reglas donde aparecen

    $accept (62)
        on left: 0
    Program <treeNode> (63)
        on left: 1
        on right: 0
    Declarations <treeNode> (64)
        on left: 2 3
        on right: 1 3
    Declaration <treeNode> (65)
        on left: 4 5 6 7
        on right: 2 3
    VariableDecl <treeNode> (66)
        on left: 8
        on right: 4 33 51
    Variable <treeNode> (67)
        on left: 9
        on right: 8 21 22
    Type <treeNode> (68)
        on left: 10 11 12 13 14 15
        on right: 9 15 17 38 87
    FunctionDecl <treeNode> (69)
        on left: 16
        on right: 5 34
    FunctionName <treeNode> (70)
        on left: 17 18
        on right: 16
    Formals <treeNode> (71)
        on left: 19 20
        on right: 16 38 39
    Variables <treeNode> (72)
        on left: 21 22
        on right: 19 22
    ClassDecl <treeNode> (73)
        on left: 23
        on right: 6
    ClassName <treeNode> (74)
        on left: 24
        on right: 23
    Extend <treeNode> (75)
        on left: 25 26
        on right: 23
    Implement <treeNode> (76)
        on left: 27 28
        on right: 23
    ListIdents <treeNode> (77)
        on left: 29 30
        on right: 27 30
    Fields <treeNode> (78)
        on left: 31 32
        on right: 23 31
    Field <treeNode> (79)
        on left: 33 34
        on right: 31
    InterfaceDecl <treeNode> (80)
        on left: 35
        on right: 7
    Prototypes <treeNode> (81)
        on left: 36 37
        on right: 35 36
    Prototype <treeNode> (82)
        on left: 38 39
        on right: 36
    StmtBlock <treeNode> (83)
        on left: 40
        on right: 16 49
    Stmts <treeNode> (84)
        on left: 41 42
        on right: 40 41
    Stmt <treeNode> (85)
        on left: 43 44 45 46 47 48 49 50 51
        on right: 41 54 55 56 57
    PossibleExpr <treeNode> (86)
        on left: 52 53
        on right: 57 58
    IfStmt <treeNode> (87)
        on left: 54
        on right: 43
    PossibleElse <treeNode> (88)
        on left: 55
        on right: 54
    WhileStmt <treeNode> (89)
        on left: 56
        on right: 44
    ForStmt <treeNode> (90)
        on left: 57
        on right: 45
    ReturnStmt <treeNode> (91)
        on left: 58
        on right: 47
    BreakStmt <treeNode> (92)
        on left: 59
        on right: 46
    PrintStmt <treeNode> (93)
        on left: 60
        on right: 48
    ListExpr <treeNode> (94)
        on left: 61 62
        on right: 60 62 93
    Expr <treeNode> (95)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 50 52 54 56 61 62 63 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 87 89 90 92
    LValue <treeNode> (96)
        on left: 88 89 90
        on right: 63 65
    Call <treeNode> (97)
        on left: 91 92
        on right: 67
    Actuals <treeNode> (98)
        on left: 93 94
        on right: 91 92
    Constant <treeNode> (99)
        on left: 95 96 97 98 99 100
        on right: 64


Estado 0

    0 $accept: . Program $end

    VOID       desplazar e ir al estado 1
    INTEGER    desplazar e ir al estado 2
    DOUBLE     desplazar e ir al estado 3
    BOOL       desplazar e ir al estado 4
    STRING     desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    ID         desplazar e ir al estado 8

    Program        ir al estado 9
    Declarations   ir al estado 10
    Declaration    ir al estado 11
    VariableDecl   ir al estado 12
    Variable       ir al estado 13
    Type           ir al estado 14
    FunctionDecl   ir al estado 15
    FunctionName   ir al estado 16
    ClassDecl      ir al estado 17
    ClassName      ir al estado 18
    InterfaceDecl  ir al estado 19


Estado 1

   18 FunctionName: VOID . ID

    ID  desplazar e ir al estado 20


Estado 2

   10 Type: INTEGER .

    $default  reduce usando la regla 10 (Type)


Estado 3

   11 Type: DOUBLE .

    $default  reduce usando la regla 11 (Type)


Estado 4

   12 Type: BOOL .

    $default  reduce usando la regla 12 (Type)


Estado 5

   13 Type: STRING .

    $default  reduce usando la regla 13 (Type)


Estado 6

   24 ClassName: CLASS . ID

    ID  desplazar e ir al estado 21


Estado 7

   35 InterfaceDecl: INTERFACE . ID LFTGATE Prototypes RGHGATE

    ID  desplazar e ir al estado 22


Estado 8

   14 Type: ID .

    $default  reduce usando la regla 14 (Type)


Estado 9

    0 $accept: Program . $end

    $end  desplazar e ir al estado 23


Estado 10

    1 Program: Declarations .
    3 Declarations: Declarations . Declaration

    VOID       desplazar e ir al estado 1
    INTEGER    desplazar e ir al estado 2
    DOUBLE     desplazar e ir al estado 3
    BOOL       desplazar e ir al estado 4
    STRING     desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    ID         desplazar e ir al estado 8

    $default  reduce usando la regla 1 (Program)

    Declaration    ir al estado 24
    VariableDecl   ir al estado 12
    Variable       ir al estado 13
    Type           ir al estado 14
    FunctionDecl   ir al estado 15
    FunctionName   ir al estado 16
    ClassDecl      ir al estado 17
    ClassName      ir al estado 18
    InterfaceDecl  ir al estado 19


Estado 11

    2 Declarations: Declaration .

    $default  reduce usando la regla 2 (Declarations)


Estado 12

    4 Declaration: VariableDecl .

    $default  reduce usando la regla 4 (Declaration)


Estado 13

    8 VariableDecl: Variable . SEMICLN

    SEMICLN  desplazar e ir al estado 25


Estado 14

    9 Variable: Type . ID
   15 Type: Type . LFTBRCKT RGHBRCKT
   17 FunctionName: Type . ID

    LFTBRCKT  desplazar e ir al estado 26
    ID        desplazar e ir al estado 27


Estado 15

    5 Declaration: FunctionDecl .

    $default  reduce usando la regla 5 (Declaration)


Estado 16

   16 FunctionDecl: FunctionName . LFTPARTH Formals RGHPARTH StmtBlock

    LFTPARTH  desplazar e ir al estado 28


Estado 17

    6 Declaration: ClassDecl .

    $default  reduce usando la regla 6 (Declaration)


Estado 18

   23 ClassDecl: ClassName . Extend Implement LFTGATE Fields RGHGATE

    EXTENDS  desplazar e ir al estado 29

    $default  reduce usando la regla 26 (Extend)

    Extend  ir al estado 30


Estado 19

    7 Declaration: InterfaceDecl .

    $default  reduce usando la regla 7 (Declaration)


Estado 20

   18 FunctionName: VOID ID .

    $default  reduce usando la regla 18 (FunctionName)


Estado 21

   24 ClassName: CLASS ID .

    $default  reduce usando la regla 24 (ClassName)


Estado 22

   35 InterfaceDecl: INTERFACE ID . LFTGATE Prototypes RGHGATE

    LFTGATE  desplazar e ir al estado 31


Estado 23

    0 $accept: Program $end .

    $default  aceptar


Estado 24

    3 Declarations: Declarations Declaration .

    $default  reduce usando la regla 3 (Declarations)


Estado 25

    8 VariableDecl: Variable SEMICLN .

    $default  reduce usando la regla 8 (VariableDecl)


Estado 26

   15 Type: Type LFTBRCKT . RGHBRCKT

    RGHBRCKT  desplazar e ir al estado 32


Estado 27

    9 Variable: Type ID .
   17 FunctionName: Type ID .

    LFTPARTH  reduce usando la regla 17 (FunctionName)
    $default  reduce usando la regla 9 (Variable)


Estado 28

   16 FunctionDecl: FunctionName LFTPARTH . Formals RGHPARTH StmtBlock

    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    ID       desplazar e ir al estado 8

    $default  reduce usando la regla 20 (Formals)

    Variable   ir al estado 33
    Type       ir al estado 34
    Formals    ir al estado 35
    Variables  ir al estado 36


Estado 29

   25 Extend: EXTENDS . ID

    ID  desplazar e ir al estado 37


Estado 30

   23 ClassDecl: ClassName Extend . Implement LFTGATE Fields RGHGATE

    IMPLEMENTS  desplazar e ir al estado 38

    $default  reduce usando la regla 28 (Implement)

    Implement  ir al estado 39


Estado 31

   35 InterfaceDecl: INTERFACE ID LFTGATE . Prototypes RGHGATE

    $default  reduce usando la regla 37 (Prototypes)

    Prototypes  ir al estado 40


Estado 32

   15 Type: Type LFTBRCKT RGHBRCKT .

    $default  reduce usando la regla 15 (Type)


Estado 33

   21 Variables: Variable .

    $default  reduce usando la regla 21 (Variables)


Estado 34

    9 Variable: Type . ID
   15 Type: Type . LFTBRCKT RGHBRCKT

    LFTBRCKT  desplazar e ir al estado 26
    ID        desplazar e ir al estado 41


Estado 35

   16 FunctionDecl: FunctionName LFTPARTH Formals . RGHPARTH StmtBlock

    RGHPARTH  desplazar e ir al estado 42


Estado 36

   19 Formals: Variables .
   22 Variables: Variables . COMMA Variable

    COMMA  desplazar e ir al estado 43

    $default  reduce usando la regla 19 (Formals)


Estado 37

   25 Extend: EXTENDS ID .

    $default  reduce usando la regla 25 (Extend)


Estado 38

   27 Implement: IMPLEMENTS . ListIdents

    ID  desplazar e ir al estado 44

    ListIdents  ir al estado 45


Estado 39

   23 ClassDecl: ClassName Extend Implement . LFTGATE Fields RGHGATE

    LFTGATE  desplazar e ir al estado 46


Estado 40

   35 InterfaceDecl: INTERFACE ID LFTGATE Prototypes . RGHGATE
   36 Prototypes: Prototypes . Prototype

    VOID     desplazar e ir al estado 47
    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    RGHGATE  desplazar e ir al estado 48
    ID       desplazar e ir al estado 8

    Type       ir al estado 49
    Prototype  ir al estado 50


Estado 41

    9 Variable: Type ID .

    $default  reduce usando la regla 9 (Variable)


Estado 42

   16 FunctionDecl: FunctionName LFTPARTH Formals RGHPARTH . StmtBlock

    LFTGATE  desplazar e ir al estado 51

    StmtBlock  ir al estado 52


Estado 43

   22 Variables: Variables COMMA . Variable

    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    ID       desplazar e ir al estado 8

    Variable  ir al estado 53
    Type      ir al estado 34


Estado 44

   29 ListIdents: ID .

    $default  reduce usando la regla 29 (ListIdents)


Estado 45

   27 Implement: IMPLEMENTS ListIdents .
   30 ListIdents: ListIdents . COMMA ID

    COMMA  desplazar e ir al estado 54

    $default  reduce usando la regla 27 (Implement)


Estado 46

   23 ClassDecl: ClassName Extend Implement LFTGATE . Fields RGHGATE

    $default  reduce usando la regla 32 (Fields)

    Fields  ir al estado 55


Estado 47

   39 Prototype: VOID . ID LFTPARTH Formals RGHPARTH SEMICLN

    ID  desplazar e ir al estado 56


Estado 48

   35 InterfaceDecl: INTERFACE ID LFTGATE Prototypes RGHGATE .

    $default  reduce usando la regla 35 (InterfaceDecl)


Estado 49

   15 Type: Type . LFTBRCKT RGHBRCKT
   38 Prototype: Type . ID LFTPARTH Formals RGHPARTH SEMICLN

    LFTBRCKT  desplazar e ir al estado 26
    ID        desplazar e ir al estado 57


Estado 50

   36 Prototypes: Prototypes Prototype .

    $default  reduce usando la regla 36 (Prototypes)


Estado 51

   40 StmtBlock: LFTGATE . Stmts RGHGATE

    $default  reduce usando la regla 42 (Stmts)

    Stmts  ir al estado 58


Estado 52

   16 FunctionDecl: FunctionName LFTPARTH Formals RGHPARTH StmtBlock .

    $default  reduce usando la regla 16 (FunctionDecl)


Estado 53

   22 Variables: Variables COMMA Variable .

    $default  reduce usando la regla 22 (Variables)


Estado 54

   30 ListIdents: ListIdents COMMA . ID

    ID  desplazar e ir al estado 59


Estado 55

   23 ClassDecl: ClassName Extend Implement LFTGATE Fields . RGHGATE
   31 Fields: Fields . Field

    VOID     desplazar e ir al estado 1
    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    RGHGATE  desplazar e ir al estado 60
    ID       desplazar e ir al estado 8

    VariableDecl  ir al estado 61
    Variable      ir al estado 13
    Type          ir al estado 14
    FunctionDecl  ir al estado 62
    FunctionName  ir al estado 16
    Field         ir al estado 63


Estado 56

   39 Prototype: VOID ID . LFTPARTH Formals RGHPARTH SEMICLN

    LFTPARTH  desplazar e ir al estado 64


Estado 57

   38 Prototype: Type ID . LFTPARTH Formals RGHPARTH SEMICLN

    LFTPARTH  desplazar e ir al estado 65


Estado 58

   40 StmtBlock: LFTGATE Stmts . RGHGATE
   41 Stmts: Stmts . Stmt

    INTEGER      desplazar e ir al estado 2
    DOUBLE       desplazar e ir al estado 3
    BOOL         desplazar e ir al estado 4
    STRING       desplazar e ir al estado 5
    THIS         desplazar e ir al estado 66
    FOR          desplazar e ir al estado 67
    WHILE        desplazar e ir al estado 68
    IF           desplazar e ir al estado 69
    RETURN       desplazar e ir al estado 70
    BREAK        desplazar e ir al estado 71
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    PRINT        desplazar e ir al estado 74
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    LFTGATE      desplazar e ir al estado 51
    RGHGATE      desplazar e ir al estado 80
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 85
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    VariableDecl  ir al estado 88
    Variable      ir al estado 13
    Type          ir al estado 34
    StmtBlock     ir al estado 89
    Stmt          ir al estado 90
    IfStmt        ir al estado 91
    WhileStmt     ir al estado 92
    ForStmt       ir al estado 93
    ReturnStmt    ir al estado 94
    BreakStmt     ir al estado 95
    PrintStmt     ir al estado 96
    Expr          ir al estado 97
    LValue        ir al estado 98
    Call          ir al estado 99
    Constant      ir al estado 100


Estado 59

   30 ListIdents: ListIdents COMMA ID .

    $default  reduce usando la regla 30 (ListIdents)


Estado 60

   23 ClassDecl: ClassName Extend Implement LFTGATE Fields RGHGATE .

    $default  reduce usando la regla 23 (ClassDecl)


Estado 61

   33 Field: VariableDecl .

    $default  reduce usando la regla 33 (Field)


Estado 62

   34 Field: FunctionDecl .

    $default  reduce usando la regla 34 (Field)


Estado 63

   31 Fields: Fields Field .

    $default  reduce usando la regla 31 (Fields)


Estado 64

   39 Prototype: VOID ID LFTPARTH . Formals RGHPARTH SEMICLN

    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    ID       desplazar e ir al estado 8

    $default  reduce usando la regla 20 (Formals)

    Variable   ir al estado 33
    Type       ir al estado 34
    Formals    ir al estado 101
    Variables  ir al estado 36


Estado 65

   38 Prototype: Type ID LFTPARTH . Formals RGHPARTH SEMICLN

    INTEGER  desplazar e ir al estado 2
    DOUBLE   desplazar e ir al estado 3
    BOOL     desplazar e ir al estado 4
    STRING   desplazar e ir al estado 5
    ID       desplazar e ir al estado 8

    $default  reduce usando la regla 20 (Formals)

    Variable   ir al estado 33
    Type       ir al estado 34
    Formals    ir al estado 102
    Variables  ir al estado 36


Estado 66

   66 Expr: THIS .

    $default  reduce usando la regla 66 (Expr)


Estado 67

   57 ForStmt: FOR . LFTPARTH PossibleExpr SEMICLN PossibleExpr SEMICLN PossibleExpr RGHPARTH Stmt

    LFTPARTH  desplazar e ir al estado 103


Estado 68

   56 WhileStmt: WHILE . LFTPARTH Expr RGHPARTH Stmt

    LFTPARTH  desplazar e ir al estado 104


Estado 69

   54 IfStmt: IF . LFTPARTH Expr RGHPARTH Stmt PossibleElse

    LFTPARTH  desplazar e ir al estado 105


Estado 70

   58 ReturnStmt: RETURN . PossibleExpr SEMICLN

    THIS         desplazar e ir al estado 66
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 106
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    $default  reduce usando la regla 53 (PossibleExpr)

    PossibleExpr  ir al estado 107
    Expr          ir al estado 108
    LValue        ir al estado 98
    Call          ir al estado 99
    Constant      ir al estado 100


Estado 71

   59 BreakStmt: BREAK . SEMICLN

    SEMICLN  desplazar e ir al estado 109


Estado 72

   86 Expr: NEW . LFTPARTH ID RGHPARTH

    LFTPARTH  desplazar e ir al estado 110


Estado 73

   87 Expr: NEWARRAY . LFTPARTH Expr COMMA Type RGHPARTH

    LFTPARTH  desplazar e ir al estado 111


Estado 74

   60 PrintStmt: PRINT . LFTPARTH ListExpr RGHPARTH SEMICLN

    LFTPARTH  desplazar e ir al estado 112


Estado 75

   84 Expr: READINTEGER . LFTPARTH RGHPARTH

    LFTPARTH  desplazar e ir al estado 113


Estado 76

   85 Expr: READLINE . LFTPARTH RGHPARTH

    LFTPARTH  desplazar e ir al estado 114


Estado 77

   97 Constant: TRUE .

    $default  reduce usando la regla 97 (Constant)


Estado 78

   98 Constant: FALSE .

    $default  reduce usando la regla 98 (Constant)


Estado 79

   68 Expr: LFTPARTH . Expr RGHPARTH

    THIS         desplazar e ir al estado 66
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 106
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    Expr      ir al estado 115
    LValue    ir al estado 98
    Call      ir al estado 99
    Constant  ir al estado 100


Estado 80

   40 StmtBlock: LFTGATE Stmts RGHGATE .

    $default  reduce usando la regla 40 (StmtBlock)


Estado 81

   95 Constant: INTVAL .

    $default  reduce usando la regla 95 (Constant)


Estado 82

   96 Constant: DOUBLEVAL .

    $default  reduce usando la regla 96 (Constant)


Estado 83

   99 Constant: STRINGVAL .

    $default  reduce usando la regla 99 (Constant)


Estado 84

  100 Constant: NULLVAL .

    $default  reduce usando la regla 100 (Constant)


Estado 85

   14 Type: ID .
   88 LValue: ID .
   91 Call: ID . LFTPARTH Actuals RGHPARTH

    LFTPARTH  desplazar e ir al estado 116

    LFTBRCKT  reduce usando la regla 14 (Type)
    LFTBRCKT  [reduce usando la regla 88 (LValue)]
    LFTPARTH  [reduce usando la regla 88 (LValue)]
    ID        reduce usando la regla 14 (Type)
    ID        [reduce usando la regla 88 (LValue)]
    $default  reduce usando la regla 88 (LValue)


Estado 86

   74 Expr: SUB . Expr

    THIS         desplazar e ir al estado 66
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 106
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    Expr      ir al estado 117
    LValue    ir al estado 98
    Call      ir al estado 99
    Constant  ir al estado 100


Estado 87

   83 Expr: NOT . Expr

    THIS         desplazar e ir al estado 66
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 106
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    Expr      ir al estado 118
    LValue    ir al estado 98
    Call      ir al estado 99
    Constant  ir al estado 100


Estado 88

   51 Stmt: VariableDecl .

    $default  reduce usando la regla 51 (Stmt)


Estado 89

   49 Stmt: StmtBlock .

    $default  reduce usando la regla 49 (Stmt)


Estado 90

   41 Stmts: Stmts Stmt .

    $default  reduce usando la regla 41 (Stmts)


Estado 91

   43 Stmt: IfStmt .

    $default  reduce usando la regla 43 (Stmt)


Estado 92

   44 Stmt: WhileStmt .

    $default  reduce usando la regla 44 (Stmt)


Estado 93

   45 Stmt: ForStmt .

    $default  reduce usando la regla 45 (Stmt)


Estado 94

   47 Stmt: ReturnStmt .

    $default  reduce usando la regla 47 (Stmt)


Estado 95

   46 Stmt: BreakStmt .

    $default  reduce usando la regla 46 (Stmt)


Estado 96

   48 Stmt: PrintStmt .

    $default  reduce usando la regla 48 (Stmt)


Estado 97

   50 Stmt: Expr .
   69 Expr: Expr . SUM Expr
   70     | Expr . SUB Expr
   71     | Expr . MULT Expr
   72     | Expr . DIV Expr
   73     | Expr . MOD Expr
   75     | Expr . LESSTHN Expr
   76     | Expr . LESSEQL Expr
   77     | Expr . GREATERTHN Expr
   78     | Expr . GREATEREQL Expr
   79     | Expr . SAME Expr
   80     | Expr . DIFF Expr
   81     | Expr . AND Expr
   82     | Expr . OR Expr
   89 LValue: Expr . POINT ID
   90       | Expr . LFTBRCKT Expr RGHBRCKT
   92 Call: Expr . POINT ID LFTPARTH Actuals RGHPARTH

    POINT       desplazar e ir al estado 119
    LFTBRCKT    desplazar e ir al estado 120
    OR          desplazar e ir al estado 121
    LESSEQL     desplazar e ir al estado 122
    SUM         desplazar e ir al estado 123
    SUB         desplazar e ir al estado 124
    MULT        desplazar e ir al estado 125
    DIV         desplazar e ir al estado 126
    LESSTHN     desplazar e ir al estado 127
    GREATERTHN  desplazar e ir al estado 128
    MOD         desplazar e ir al estado 129
    GREATEREQL  desplazar e ir al estado 130
    SAME        desplazar e ir al estado 131
    DIFF        desplazar e ir al estado 132
    AND         desplazar e ir al estado 133

    SUB       [reduce usando la regla 50 (Stmt)]
    $default  reduce usando la regla 50 (Stmt)


Estado 98

   63 Expr: LValue . EQUAL Expr
   65     | LValue .

    EQUAL  desplazar e ir al estado 134

    $default  reduce usando la regla 65 (Expr)


Estado 99

   67 Expr: Call .

    $default  reduce usando la regla 67 (Expr)


Estado 100

   64 Expr: Constant .

    $default  reduce usando la regla 64 (Expr)


Estado 101

   39 Prototype: VOID ID LFTPARTH Formals . RGHPARTH SEMICLN

    RGHPARTH  desplazar e ir al estado 135


Estado 102

   38 Prototype: Type ID LFTPARTH Formals . RGHPARTH SEMICLN

    RGHPARTH  desplazar e ir al estado 136


Estado 103

   57 ForStmt: FOR LFTPARTH . PossibleExpr SEMICLN PossibleExpr SEMICLN PossibleExpr RGHPARTH Stmt

    THIS         desplazar e ir al estado 66
    NEW          desplazar e ir al estado 72
    NEWARRAY     desplazar e ir al estado 73
    READINTEGER  desplazar e ir al estado 75
    READLINE     desplazar e ir al estado 76
    TRUE         desplazar e ir al estado 77
    FALSE        desplazar e ir al estado 78
    LFTPARTH     desplazar e ir al estado 79
    INTVAL       desplazar e ir al estado 81
    DOUBLEVAL    desplazar e ir al estado 82
    STRINGVAL    desplazar e ir al estado 83
    NULLVAL      desplazar e ir al estado 84
    ID           desplazar e ir al estado 106
    SUB          desplazar e ir al estado 86
    NOT          desplazar e ir al estado 87

    $default  reduce usando la regla 53 (PossibleExpr)
